--- a/network/acl.html
+++ b/network/acl.html
@@ -134,6 +134,10 @@
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -152,6 +156,10 @@ deny any any</code></pre>
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -181,6 +189,10 @@ deny ip any any</code></pre>
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -198,6 +210,10 @@ rule 5 permit source 192.168.1.0 0.0.0.255</code></pre>
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -215,6 +231,10 @@ rule 5 permit tcp source 192.168.1.0 0.0.0.255 destination 10.0.0.0 0.0.0.255 de
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -233,6 +253,10 @@ rule 10 permit</code></pre>
                         <li><marcador class="resaltado8">Ejemplo:</marcador></li>
                         <div class="consola">
                             <div class="barra-superior-consola">
+                                <div class="grupo-icono-texto">
+                                    <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                    <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                                </div>
                                 <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                             </div>
                             <div class="codigo-consola">
@@ -333,6 +357,10 @@ rule 10 deny ip</code></pre>
                     <li><marcador class="resaltado8">Denegar video al S1 (bloqueo de tráfico de video desde PC1):</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -361,6 +389,10 @@ interface GigabitEthernet0/1
                     <p></p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -385,6 +417,10 @@ interface GigabitEthernet0/1
                     <p></p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -421,6 +457,10 @@ interface GigabitEthernet0/1
                 <p></p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -449,6 +489,10 @@ interface GigabitEthernet0/1
                 <p></p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -468,6 +512,10 @@ interface GigabitEthernet0/2
                 <p>Puedes verificar que las ACL se estén aplicando correctamente con estos comandos:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -515,6 +563,10 @@ show ip interface GigabitEthernet0/2</code></pre>
                     <p></p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -544,6 +596,10 @@ interface GigabitEthernet0/0/0
                     <p></p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -569,6 +625,10 @@ interface GigabitEthernet0/0/1
                     <p></p>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -606,6 +666,10 @@ interface GigabitEthernet0/0/1
                 <p></p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -635,6 +699,10 @@ interface GigabitEthernet0/0/1
                 <p></p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -655,6 +723,10 @@ interface GigabitEthernet0/0/2
             <p>Puedes verificar que las ACL se estén aplicando correctamente con estos comandos:</p>
             <div class="consola">
                 <div class="barra-superior-consola">
+                    <div class="grupo-icono-texto">
+                        <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                        <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                    </div>
                     <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                 </div>
                 <div class="codigo-consola">
