--- a/network/enlace.html
+++ b/network/enlace.html
@@ -104,6 +104,10 @@
                 <p>Sin embargo, en ciertos casos, como cuando se configura un EtherChannel entre dos dispositivos Cisco que están conectados directamente y se desea evitar la negociación de troncal, se puede utilizar el comando "switchport nonegotiate" en los puertos miembros del EtherChannel. Esto garantiza que el enlace se configure como un enlace de troncal sin pasar por el proceso de negociación de troncal.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -153,6 +157,10 @@ Switch2# exit</code></pre>
                 <p>Para establecer una prioridad más alta en el enlace GigabitEthernet0/1 en ambos switches, y dejar la prioridad predeterminada (32768) para los otros enlaces, puedes ajustar la prioridad del puerto específico. En este caso, debes reducir la prioridad del puerto GigabitEthernet0/1 para que sea menor que 32768. Aquí se muestra cómo hacerlo:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -173,6 +181,10 @@ Switch2# exit</code></pre>
                 <p>El modo static configura manualmente la agregación de enlaces, sin la utilización de protocolos de control dinámico como LACP o PAgP. Se configuran los puertos específicos para formar parte de un grupo de agregación, y la configuración se mantiene estática sin necesidad de negociación dinámica.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -210,6 +222,10 @@ Switch2# exit</code></pre>
             <p>Esta configuración permite que Switch1 y Switch2 se conviertan en un solo enlace lógico, con balanceo de carga entre los enlaces agregados, mejorando la eficiencia y la tolerancia a fallos en la conexión entre los switches.</p>
             <div class="consola">
                 <div class="barra-superior-consola">
+                    <div class="grupo-icono-texto">
+                        <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                        <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                    </div>
                     <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                 </div>
                 <div class="codigo-consola">
