--- a/network/nat.html
+++ b/network/nat.html
@@ -110,6 +110,10 @@
                 <p>NAT estático mapea una dirección IP privada a una dirección IP pública específica. Esta configuración es útil cuando necesitas que un dispositivo interno, como un servidor web, sea accesible desde el exterior.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -130,6 +134,10 @@ ip nat inside source static 192.168.1.10 203.0.113.10</code></pre>
                 <p>NAT dinámico asigna una dirección IP pública desde un pool a cada dispositivo que necesita acceso a Internet. Este tipo es útil cuando tienes un conjunto limitado de direcciones IP públicas y quieres que se asignen dinámicamente a los dispositivos internos.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -152,6 +160,10 @@ interface GigabitEthernet0/2
                 <p>PAT permite que varios dispositivos compartan una única dirección IP pública al usar puertos diferentes. Es común en redes domésticas y pequeñas empresas.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -175,6 +187,10 @@ ip nat inside source list 1 interface GigabitEthernet0/2 overload</code></pre>
                 <p>NAT estático en Huawei permite el mapeo de una dirección IP privada específica a una dirección IP pública. Esto es útil para servicios internos que deben ser accesibles desde el exterior.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -195,6 +211,10 @@ nat static global 203.0.113.10 inside 192.168.1.10</code></pre>
                 <p>NAT dinámico en Huawei utiliza un grupo de direcciones IP públicas para asignarlas a dispositivos internos cuando necesitan acceso a Internet. Es útil cuando se cuenta con múltiples IPs públicas.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -218,6 +238,10 @@ nat outbound 2001 address-group 1</code></pre>
                 <p>PAT permite que varios dispositivos internos compartan una sola dirección IP pública usando diferentes puertos. Es útil para redes que necesitan asignar una única IP pública a múltiples dispositivos.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
