--- a/network/ospf.html
+++ b/network/ospf.html
@@ -309,6 +309,10 @@
                     <li><marcador class="resaltado8">Router R1 (Área 0 y Área 1)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -327,6 +331,10 @@ interface GigabitEthernet0/1
                     <li><marcador class="resaltado8">Router R2 (Área 1)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -344,6 +352,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Router INET-1 (Área 0) - Router Central</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -370,6 +382,10 @@ interface GigabitEthernet0/1
                     <li><marcador class="resaltado8">Router R3 (Área 0 y Área 2)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -388,6 +404,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Remote-1 (Área 2)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -404,6 +424,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Router Remote-2 (Área 3)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -429,6 +453,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Router R1 (Área 0 y Área 1)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -449,6 +477,10 @@ interface GigabitEthernet0/1
                     <li><marcador class="resaltado8">Router R2 (Área 1)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -467,6 +499,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Router INET-1 (Área 0) - Router Central</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -492,6 +528,10 @@ interface GigabitEthernet0/1
                     <li><marcador class="resaltado8">Router R3 (Área 0 y Área 2)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -512,6 +552,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Remote-1 (Área 2)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
@@ -529,6 +573,10 @@ interface GigabitEthernet0/0
                     <li><marcador class="resaltado8">Router Remote-2 (Área 3)</marcador></li>
                     <div class="consola">
                         <div class="barra-superior-consola">
+                            <div class="grupo-icono-texto">
+                                <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                                <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                            </div>
                             <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                         </div>
                         <div class="codigo-consola">
