--- a/network/static.html
+++ b/network/static.html
@@ -148,7 +148,10 @@ Interfaz de salida: FastEthernet0/0</div>
                 <ul class="custom-list">
                     <li>Router 1</li>
                 <div class="consola">
-                    <div class="barra-superior-consola">
+                    <div class="barra-superior-consola">                        <div class="grupo-icono-texto">
+                        <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                        <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                    </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -169,6 +172,10 @@ ip route 10.10.13.0 255.255.255.252 10.10.11.2  # Ruta hacia R4 a través de R2<
                     <li>Router 2</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -189,6 +196,10 @@ ip route 10.10.12.0 255.255.255.252 10.10.13.2  # Ruta hacia R3 a través de R4<
                     <li>Router 3</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -209,6 +220,10 @@ ip route 10.10.13.0 255.255.255.252 10.10.12.2  # Ruta hacia R2 a través de R4<
                     <li>Router 4</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -244,6 +259,10 @@ ip route 10.10.11.0 255.255.255.252 10.10.13.1  # Ruta hacia R1 a través de R2<
                     <li>Router 1</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -266,6 +285,10 @@ ip route-static 10.10.13.0 255.255.255.252 10.10.11.2  # Ruta hacia R4 a través
                     <li>Router 2</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -288,6 +311,10 @@ ip route-static 10.10.12.0 255.255.255.252 10.10.13.2  # Ruta hacia R3 a través
                     <li>Router 3</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -310,6 +337,10 @@ ip route-static 10.10.13.0 255.255.255.252 10.10.12.2  # Ruta hacia R2 a través
                     <li>Router 4</li>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -405,6 +436,10 @@ ip route-static 10.10.11.0 255.255.255.252 10.10.13.1  # Ruta hacia R1 a través
                 <p>Ejemplo de configuración para priorizar una ruta:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
