--- a/network/vlan.html
+++ b/network/vlan.html
@@ -74,6 +74,10 @@
                 <h3>Cisco</h3>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -186,6 +190,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior para configurar los dispositivos de red, solo que se sustituye un switch por un router, con el cual podrán comunicarse todas las VLANs entre sí mediante subinterfaces.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -332,6 +340,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>A continuación, se muestra como configurar el Protocolo de Transmisión de VLAN (VTP) y establecer la conectividad entre todas las VLANs a través de todos los switches configurados en modo de acceso:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -437,6 +449,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>La conexión entre los switches se establece como troncal solo cuando ambos switches negocian y acuerdan configurar el enlace para permitir múltiples VLANs. Este proceso se facilita a través de DTP, que asegura que los enlaces adecuados se configuren sin intervención manual, lo cual es muy útil cuando hay cambios frecuentes en la infraestructura de red.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -540,6 +556,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior para configurar los dispositivos de red, solo que se sustituye un switch por un router, con el cual podrán comunicarse todas las VLANs entre sí mediante subintefaces.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -688,6 +708,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>A continuación, se muestra como establecer la conectividad entre todas las VLANs a través de todos los switches configurados en modo de acceso:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -808,6 +832,10 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>La flexibilidad de un puerto VLAN híbrido radica en su capacidad para definir qué VLANs pasan por el puerto como tráfico etiquetado y cuáles se manejan como tráfico nativo no etiquetado. Esto proporciona una solución versátil para la conectividad en redes donde se requiere la coexistencia de dispositivos con y sin VLANs.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
