--- a/network/vpn.html
+++ b/network/vpn.html
@@ -150,6 +150,10 @@
                 <h6>Router A</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -193,6 +197,10 @@ ip route 192.168.2.0 255.255.255.0 200.0.0.1</code></pre>
                 <h6>Router B</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -237,6 +245,10 @@ ip route 192.168.1.0 255.255.255.0 100.0.0.1</code></pre>
                 <p>Para verificar el estado del túnel, podemos usar los siguientes comandos en ambos routers:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -260,6 +272,10 @@ show crypto ipsec sa     ! Verifica la Fase 2 (IPsec)</code></pre>
                 <h6>Router A</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
@@ -308,6 +324,10 @@ ip route-static 192.168.2.0 255.255.255.0 200.0.0.1</code></pre>
                 <h6>Router B</h6>
                 <div class="consola">
                     <div class="barra-superior-consola">
+                        <div class="grupo-icono-texto">
+                            <img src="../media/cmd.png" alt="Icono" class="icono-cmd">
+                            <span class="texto-cmd">C:\Windows\system32\cmd.exe</span>
+                        </div>
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo-consola">
